plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'kr.or.kmi'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(22)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	/*mariadb*/
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

	/*excel*/
	implementation 'org.apache.poi:poi:5.2.2'
	implementation 'org.apache.poi:poi-ooxml:5.2.2'

	/*mailsender*/
	implementation group: 'com.sun.mail', name: 'jakarta.mail', version: '2.0.1'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.5.1'

	/*webflux*/
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	/*querydsl*/
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	/*swagger*/
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

	/*excel*/
	implementation 'org.apache.poi:poi:5.2.2'
	implementation 'org.apache.poi:poi-ooxml:5.2.2'

	/*mailsender*/
	implementation group: 'com.sun.mail', name: 'jakarta.mail', version: '2.0.1'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.5.1'

	// webclient
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	/*querydsl*/
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

}


tasks.named('test') {
	useJUnitPlatform()
}
